--- a/digypet/02/index.mjml
+++ b/digypet/02/index.mjml
@@ -47,15 +47,17 @@
           passionate about animals, wildlife and eco-awareness just like you.
           <br /><br />
           Have you ever thought about having your fur baby transformed into a
-          beautiful pet painting or Pet portrait that you can hang up in that
-          special place for all your friends and family to see? <br /><br />
+          beautiful <span style="color: #f87171">pet painting</span> or
+          <span style="color: #f87171">pet portrait</span> that you can hang up
+          in that special place for all your friends and family to see?
+          <br /><br />
           Here at
           <a
             href="https://www.digypet.com/"
             style="
               text-decoration: none;
-              color: #0ea5e9;
-              border-bottom: 1px solid #0ea5e9;
+              color: #f87171;
+              border-bottom: 1px solid #f87171;
             "
             >DigyPet</a
           >
