--- a/digypet/02/index.mjml
+++ b/digypet/02/index.mjml
@@ -47,8 +47,8 @@
           passionate about animals, wildlife and eco-awareness just like you.
           <br /><br />
           Have you ever thought about having your fur baby transformed into a
-          beautiful <span style="color: #f87171">pet painting</span> or
-          <span style="color: #f87171">pet portrait</span> that you can hang up
+          beautiful <span style="color: #7c3aed">pet painting</span> or
+          <span style="color: #7c3aed">pet portrait</span> that you can hang up
           in that special place for all your friends and family to see?
           <br /><br />
           Here at
@@ -56,8 +56,8 @@
             href="https://www.digypet.com/"
             style="
               text-decoration: none;
-              color: #f87171;
-              border-bottom: 1px solid #f87171;
+              color: #7c3aed;
+              border-bottom: 1px solid #7c3aed;
             "
             >DigyPet</a
           >
