--- a/mbs/index.mjml
+++ b/mbs/index.mjml
@@ -9,7 +9,7 @@
   </mj-head>
 
   <mj-body>
-    <mj-section>
+    <mj-section background-color="#171717">
       <mj-column>
         <mj-image
           href="https://misterbamboostraws.com"
@@ -734,7 +734,7 @@
       </mj-column>
     </mj-section>
 
-    <mj-section padding-top="24px" padding-bottom="24px">
+    <mj-section padding-top="24px" padding-bottom="24px" background-color="#171717">
       <mj-column>
         <mj-image
           href="https://misterbamboostraws.com"
@@ -746,13 +746,13 @@
       </mj-column>
     </mj-section>
 
-    <mj-section padding="0">
+    <mj-section padding="0" background-color="#171717">
       <mj-column>
         <mj-divider width="300px" border-color="#777777" border-width="1px" />
       </mj-column>
     </mj-section>
 
-    <mj-section padding="0" padding-bottom="24px">
+    <mj-section padding="0" padding-bottom="24px" background-color="#171717">
       <mj-column>
         <mj-social font-size="15px" icon-size="30px" mode="horizontal">
           <mj-social-element background-color="#171717" name="instagram" href="https://misterbamboostraws.com/">
